# noema

./: .commitlintrc.js  .dockerignore  .editorconfig  .env.example  .gitignore  .gitmessage  .gitmodules  .lintstagedrc  .lintstagedrc.yml  .prettierignore  .prettierrc  .release-please-manifest.json  CHANGELOG.md  LICENSE.txt  Makefile  Makefile.windows  README.md  architecture.md  cliff.toml  commitlint.config.mjs  docker-compose.local.yml  docker-compose.yml  env.example  eslint.config.mjs  eslintrc.json  extensions.json  module-graph.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-notes.md  release-please-config.json  roadmap.md  settings.json  tasks.md  tmp-kg-node.json  tsconfig.build.json  tsconfig.json  tsconfig.node.json  turbo.json
.claude/: CLAUDE.md
.copilot/: PROJECT_CONTEXT.md
.copilot/instructions/: DESIGN_PATTERNS_FOR_NOEMA.md  ENTITY_PATTERNS_FOR_NOEMA.md  FEATURE_OVERVIEW_knowledge_graph.md  FEATURE_knowledge_graph.md  FEATURE_metacognition_extra_features.md  FEATURE_teaching_approaches.md  GAPS_TO_FILL.md  Metacognitive_features_overview.md  SKELETON_FILES_SUMMARY.md  architecture-plan.md
.copilot/phases/: PHASE_0_CHECKLIST.md
.copilot/templates/: AGENT_CLASS_SPECIFICATION.md  API_SPECIFICATION.md  ARCHTECTURE_SPECIFICATIONS.md  EVENT_SCHEMA_SPECIFICATION.md  MCP_TOOL_SPECIFICATION.md  SERVICE_CLASS_SPECIFICATION.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  mobile.yml  pr-checks.yml  release.yml
.husky/: commit-msg  pre-commit  pre-push
agent-comms/: decisions.md
agent-comms/inbox/: backend-implementer.md  docs-agent.md  frontend-implementer.md
agent-comms/outbox/: architect.md
agent-comms/review/: batch-5-report.md  batch-6-report.md
agents/: pyproject.toml  requirements-dev.txt  requirements.txt
apps/ai/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.docker.txt
apps/ai/app/: __init__.py  config.py  main.py
apps/ai/app/routes/: __init__.py  analyze.py  audio.py  embed.py  generate.py  health.py  ocr.py  parse.py  recommend.py
apps/ai/app/services/: __init__.py  analyzer.py  card_generator.py  embedder.py  generator.py  llm.py  parser.py  parsers.py  recommender.py  redis_client.py  vector_store.py
apps/mobile/: app.json  metro.config.js  nativewind-env.d.ts  package.json  tailwind.config.js  tsconfig.json
apps/web/: .env.example  package.json  tailwind.config.ts  tsconfig.json
apps/web-admin/: .env.example  next.config.mjs  package.json
docs/: PROJECT_CONTEXT.md  REFACTOR-SAFETY-PLAYBOOK.md  SETUP-AND-TEST-MANUAL.md  TODO-DUAL-LANE-IMPROVEMENTS.md  TODO-LEARNING-AGENT-IMPLEMENTATION.md  TODO-SCHEDULER-AGENT-READINESS-IMPLEMENTATION.md  TODO-SCHEDULER-SERVICE-NEXT-IMPROVEMENTS.md
docs/adr/: ADR-001-api-gateway-selection.md  ADR-002-jwt-scope-derivation-and-account-flows.md  ADR-003-scheduler-read-api-and-forecast.md  ADR-004-admin-user-management.md  ADR-005-session-enhancements-study-streak.md  ADR-006-gdpr-data-export.md  ADR-007-phase06-card-system-frontend.md  ADR-008-api-first-card-import-pipeline.md
docs/architecture/: AGENT_MCP_TOOL_REGISTRY.md
docs/audits/: SESSION-SERVICE-PHASE5-AUDIT.md  backend-services-audit.md  comprehensive-cross-service-audit.md  comprehensive-service-audit.md  knowledge-graph-service-audit-2025.md  knowledge-graph-service-domain-audit.md  knowledge-graph-service-implementation-audit.md  scheduler-service-phase3-audit.md
docs/backend/: card-imports.md  knowledge-graph-comparison.md  mode-aware-content-and-batch-creation.md  mode-aware-knowledge-graph.md  mode-aware-learning-core.md  mode-aware-scheduler-and-session.md  ontology-imports.md  template-list-route.md  user-settings-pomodoro.md
docs/content-service-remediation/: PHASE-1-FOUNDATION-DRY.md  PHASE-2-DATA-INTEGRITY.md  PHASE-3-SECURITY-RESILIENCE.md  PHASE-4-PERFORMANCE-SEARCH.md  PHASE-5-API-ENHANCEMENTS.md  PHASE-6-EVENT-SYSTEM.md  PHASE-7-GRAPHQL.md  PHASE-8-TESTING.md  README.md
docs/frontend/: admin-ckg-graph.md  admin-data-states.md  card-creator.md  dashboard.md  error-pages.md  goals.md  knowledge-comparison.md  knowledge-health.md  knowledge-map.md  learning-mode-toggle.md  misconception-center.md  mode-aware-card-and-batch-flows.md  mode-aware-knowledge-map.md  ontology-imports.md  pomodoro-timer.md  reviews.md  session-summary.md
docs/guides/: mode-aware-data-migration.md
docs/instructions/: DESIGN_PATTERNS_FOR_NOEMA.md  ENTITY_PATTERNS_FOR_NOEMA.md  FEATURE_extra_features.md  FEATURE_knowledge_graph.md  FEATURE_mental_debugger.md  FEATURE_strategy_loadouts.md  Metacognitive_features_overview.md  PROJECT_CONTEXT.md  SKELETON_FILES_SUMMARY.md  architecture-plan.md
docs/knowledge-graph-service-implementation/: CI-TESTING-STRATEGY.md  EDGE-TYPE-ONTOLOGY-REFERENCE.md  EDGE-TYPE-PEDAGOGY-FEATURES.md  PHASE-1-PROJECT-BOOTSTRAP.md  PHASE-10-TESTING.md  PHASE-2-SHARED-TYPES-EVENTS.md  PHASE-3-DOMAIN-LAYER.md  PHASE-4-REPOSITORIES.md  PHASE-5-PKG-OPERATIONS.md  PHASE-6-CKG-MUTATION-PIPELINE.md  PHASE-7-STRUCTURAL-METRICS.md  PHASE-8-API-EVENTS.md  PHASE-8-INFRASTRUCTURE-GAP-ANALYSIS.md  PHASE-8b-RELATIONAL-TRAVERSAL-ENDPOINTS.md  PHASE-8c-STRUCTURAL-ANALYSIS-ENDPOINTS.md  PHASE-8d-ORDERING-AND-RANKING-ENDPOINTS.md  PHASE-8e-ONTOLOGICAL-GUARDRAILS.md  PHASE-8f-TECH-DEBT-RESOLUTION.md  PHASE-9-MCP-TOOLS.md  README.md  STRUCTURAL-METRICS-SPECIFICATION.md
docs/phases/: TODOs
docs/plans/: 2026-03-04-phase-00-design-tokens.md  2026-03-04-phase-01-ui-primitives-design.md  2026-03-04-phase-01-ui-primitives.md  2026-03-04-phase-02-api-client.md  2026-03-04-phase-03-state-and-infrastructure.md  2026-03-04-phase-04-auth-and-onboarding.md  2026-03-05-phase-06d-pages.md  (+16 more)
licenses/: NOEMA-ACADEMIC-LICENSE.txt  NOEMA-CONTRIBUTOR-AGREEMENT.txt  NOEMA-NONCOMMERCIAL-LICENSE.txt
scripts/: backfill-scheduler-from-session-attempts.ts  dev-apps-no-watch-stop.ps1  dev-apps-no-watch.ps1  dev-services-no-watch-stop.ps1  dev-services-no-watch.ps1  ensure-dev-infra.cjs  ensure-next-middleware-manifest.cjs  run-dev.cjs  start-background-script.ps1
(+1067 files in other folders)
